tests/invalid/variables/bad_lvalue.rs
/*
fail: 1
*/

main(): i32 {
    a: i64 = 2;
    a + 3 = 4;
    return a;
}